apps/pinchflat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinchflat
  namespace: transmission
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pinchflat
  template:
    metadata:
      labels:
        app: pinchflat
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: pinchflat
          image: ghcr.io/kieraneglin/pinchflat:latest@sha256:01b4f98aabaf3f5fe394213f7a32578c9e84e42080f52e2f8334021a4473b202
          ports:
            - name: http
              containerPort: 8945
          startupProbe:
            httpGet:
              path: /healthcheck
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 1536Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pinchflat-config
        - name: media
          persistentVolumeClaim:
            claimName: youtube-media
