apps/pinchflat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinchflat
  namespace: transmission
spec:
  selector:
    app: pinchflat
  ports:
    - name: http
      port: 8945
      targetPort: http
